# fusion-ahrs

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  justfile
.config/: nextest.toml
.github/workflows/: build.yml  cover.yml
benches/: ahrs_benchmarks.rs
examples/: advanced.rs  simple.rs
src/: ahrs.rs  axes.rs  calibration.rs  compass.rs  lib.rs  math.rs  offset.rs  types.rs
tests/: c_comparison_test.rs  c_parity_tests.rs  verification_tests.rs
