[package]
name = "fusion-ahrs"
version = "0.1.0"
edition = "2024"
authors = ["Wil Boayue <wil@wsbsolutions.com>"]
description = "A Rust port of the C library by xioTechnologies, providing memory safety and zero-cost abstractions while maintaining the same performance characteristics."
readme = "README.md"
homepage = "https://github.com/wboayue/fusion-ahrs/"
repository = "https://github.com/wboayue/fusion-ahrs/"
documentation = "https://docs.rs/fusion-ahrs/latest/fusion-ahrs/"
license = "MIT"
keywords = ["ahrs", "imu", "sensor-fusion", "quaternion", "embedded"]
categories = ["embedded", "algorithms", "science"]
exclude = [
    "justfile",
    "CLAUDE.md",
    "fusion-c",
]

[dependencies]
nalgebra = "0.34.0"

[dev-dependencies]
csv = "1.3"
plotters = "0.3"
serde = { version = "1.0", features = ["derive"] }
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.9"
rand_pcg = "0.9"

[[bench]]
name = "ahrs_benchmarks"
harness = false
